# coriolis

./: .gitignore  LICENSE  README.adoc  README.rst
bootstrap/: buildCoriolis.py  buildMangrove.py  ccb.py  coriolisEnv.py  mangroveEnv.py  socInstaller.py
bootstrap/builder/: Builder.py  BuilderGui.py  Configuration.py  ConfigureWidget.py  Highlighter.py  __init__.py
bootstrap/cmake_modules/: FindBootstrap.cmake  FindPythonSitePackages.cmake
coloquinte/: CMakeLists.txt
coloquinte/src/: CMakeLists.txt
coloquinte/src/coloquinte/: common.hxx
crlcore/: CMakeLists.txt
crlcore/doc/crlcore/: doxyfile
crlcore/doc/doxygen/: doxyfile
crlcore/etc/cmos/: alliance.conf  hMetis.conf  kite.conf  mauka.conf  misc.conf  nimbus.conf  patterns.conf  technology.conf
crlcore/etc/ispd05/: alliance.conf  display.conf  kite.conf  stratus1.conf
crlcore/etc/scmos_deep_018/: alliance.conf  display.conf  etesian.conf  hMetis.conf  kite.conf  mauka.conf  misc.conf  nimbus.conf  patterns.conf  stratus1.conf  technology.conf
crlcore/etc/vsc200/: display.conf  hMetis.conf  kite.conf  mauka.conf  misc.conf  nimbus.conf  patterns.conf  stratus1.conf  technology.conf
crlcore/python/: coriolisInit.py
crlcore/python/helpers/: Alliance.py  Configuration.py  Debug.py  Display.py  Patterns.py  RealTechnology.py  SymbolicTechnology.py  __init__.py  etesian.py  hMetis.py  kite.py  mauka.py  misc.py  nimbus.py  stratus1.py
crlcore/src/LibraryManager/: CMakeLists.txt
crlcore/src/ccore/: Banner.cpp  CMakeLists.txt
crlcore/src/ccore/crlcore/: Histogram.h
crlcore/src/cyclop/: CMakeLists.txt
crlcore/src/pyCRL/: CMakeLists.txt  PyAllianceFramework.cpp  PyAllianceLibrary.cpp  PyBanner.cpp  PyCRL.cpp  PyCatalogState.cpp  PyEnvironment.cpp  PyRoutingLayerGauge.cpp  PyToolBox.cpp
crlcore/src/pyCRL/crlcore/: PyAcmSigda.h  PyAllianceFramework.h  PyAllianceLibrary.h  PyBanner.h  PyBlif.h  PyCatalog.h  PyCatalogState.h  PyCellGauge.h  PyEnvironment.h  PyGraphicToolEngine.h  PyIspd05.h  PyRoutingGauge.h  PyRoutingLayerGauge.h  PyToolEngine.h
crlcore/src/x2y/: CMakeLists.txt
cumulus/: CMakeLists.txt
cumulus/src/: Alliance.py  placeandroute.py
cumulus/src/plugins/: ChipPlugin.py  ClockTreePlugin.py  RSavePlugin.py  RSavePluginAll.py  __init__.py
cumulus/src/plugins/chip/: BlockCorona.py  BlockPower.py  Configuration.py  __init__.py  (+1 more)
cumulus/src/tools/: px2mpx.py
documentation/: CMakeLists.txt
documentation/UsersGuide/: UsersGuide.html  UsersGuide.rst  socstyle.tex
documentation/examples/AM2901/: amd2901_chip.py  doChip.py
documentation/examples/code/engine/smurf/src/smurf/: PyGraphicSmurfEngine.h  PySmurfEngine.h
equinox/: CMakeLists.txt
equinox/src/: CMakeLists.txt
etesian/: CMakeLists.txt
etesian/src/: CMakeLists.txt  PyEtesian.cpp
etesian/src/etesian/: PyEtesianEngine.h  PyGraphicEtesianEngine.h
hurricane/: CMakeLists.txt  LICENSE
hurricane/cmake_modules/: FindHURRICANE.cmake
hurricane/doc/hurricane/: doxyfile
hurricane/src/hurricane/: CMakeLists.txt  DataBase.cpp
hurricane/src/isobar/: CMakeLists.txt  PyBreakpoint.cpp  PyDbU.cpp  PyHurricane.cpp  PyInstance.cpp  PyLayerMask.cpp  PyLibrary.cpp  PyMaterial.cpp  PyNetDirection.cpp  PyNetType.cpp  PyOrientation.cpp  PyPath.cpp  PyPin.cpp  PyPinDirection.cpp  PyPinPlacementStatus.cpp  PyPlacementStatus.cpp  PyQuery.cpp  PyQueryMask.cpp  PyReference.cpp  PyTechnology.cpp
hurricane/src/viewer/: CMakeLists.txt  CellViewer.cpp  PyDisplayStyle.cpp  PyDrawingGroup.cpp  PyDrawingStyle.cpp  PyGraphics.cpp  PyHApplication.cpp  PyHSVr.cpp  PyViewer.cpp  Script.cpp  ZoomCommand.cpp
ispd/: CMakeLists.txt
ispd/src/: CMakeLists.txt  IspdMain.cpp
katabatic/: CMakeLists.txt
katabatic/doc/: doxyfile
katabatic/src/: CMakeLists.txt  PyKatabatic.cpp
kite/: CMakeLists.txt
kite/doc/: doxyfile
kite/python/: kiteInit.py
kite/src/: CMakeLists.txt  PyKite.cpp  PyKiteEngine.cpp
kite/src/kite/: PyGraphicKiteEngine.h  PyKiteEngine.h
knik/: CMakeLists.txt  doxyfile
knik/src/: CMakeLists.txt
mauka/: CMakeLists.txt
mauka/src/: CMakeLists.txt  Configuration.cpp  GraphicMaukaEngine.cpp  PyGraphicMaukaEngine.cpp  PyMauka.cpp  PyMaukaEngine.cpp  Surface.cpp
mauka/src/mauka/: PyGraphicMaukaEngine.h  PyMaukaEngine.h
metis/: CMakeLists.txt
metis/src/: CMakeLists.txt  Configuration.cpp  PyMetis.cpp  PyMetisEngine.cpp
metis/src/metis/: PyMetisEngine.h
nimbus/: CMakeLists.txt
nimbus/src/: CMakeLists.txt  Configuration.cpp  PyNimbus.cpp  PyNimbusEngine.cpp
nimbus/src/nimbus/: PyNimbusEngine.h
solstice/: CMakeLists.txt
solstice/src/: CMakeLists.txt
stratus1/: CMakeLists.txt  configure.in
stratus1/doc/: CMakeLists.txt
stratus1/doc/developer/: CMakeLists.txt  man_stratus.tex
stratus1/doc/developper/: CMakeLists.txt
stratus1/doc/dpgen/: CMakeLists.txt
stratus1/doc/patterns/: CMakeLists.txt  patterns.tex
stratus1/doc/stratus/: CMakeLists.txt  man_stratus.tex  stratus.tex
stratus1/doc/stratus/fichiers/: addaccu.py  test.py
stratus1/src/dpgen/: ROM_encours.py  dpgen_ADSB2F.py  dpgen_Nul.py  dpgen_RAM.py  dpgen_RF1.py  dpgen_RF2.py  dpgen_ROM.py  dpgen_ROM2.py  dpgen_ROM4.py  dpgen_Regular.py  dpgen_Shifter.py  dpgen_Shrot.py
stratus1/src/modules/patterns/: patread.py  patterns.py  patwrite.py  stimuli.py  synopsys.py  utils.py
stratus1/src/stratus/: st_bool.py  st_cat.py  st_comp.py  st_const.py  st_extend.py  st_func_gen_wallace.py  st_generate.py  st_getrealmodel.py  st_instance.py  st_model.py  st_mult.py  st_mult_blocs.py  st_mult_matrix.py  st_mux.py  st_net.py  st_param.py  st_parser.py  st_placeAndRoute.py  st_placement.py  st_ref.py  st_shifter.py  st_slansky.py  stratus.py  util.py  util_Const.py  util_Defs.py  util_Gen.py  util_Misc.py  util_Place.py  util_Route.py  util_Shift.py  util_uRom.py
unicorn/: CMakeLists.txt
unicorn/doc/unicorn/: doxyfile
unicorn/python/: unicornInit.py
unicorn/src/: CMakeLists.txt  PyUnicorn.cpp  cgt.py  coriolis.py
unicorn/src/unicorn/: PyUnicornGui.h
vlsisapd/: CMakeLists.txt
vlsisapd/cmake_modules/: FindVLSISAPD.cmake
vlsisapd/doc/: doxyfile
(+68 files in other folders)
